# bachelor-thesis

./: .gitignore  Makefile.am  Makefile.in  README.md  Rules.mk  calc.mltop  configure  configure.ac  example2.txt  libzone_stubs.clib  notes  reltool.ml
c/: Makefile.am  Zone_stubs.mli.nw  Zone_stubs_test.ml  zone.mllib  zone_stubs.c.nw
fernandez-ocaml/: README.md  fernandez
fernandez-ocaml-noweb/: Makefile  fernandez.ml.nw  fernandez.nw
grammar/: Makefile  calc.ml  lexer.mll  parser.mly  types.ml
grammar-noweb/: Grammar_types.ml.nw  Makefile  Makefile.am  Timed_automaton_lexer.mll.nw  Timed_automaton_parser.mly.nw  lexer.mll.nw  parser.mly.nw  types.ml.nw  types.mli.nw
grammar-noweb/examples/: 1.txt  1clock02.txt  2.txt  2clock02.txt  4.txt  7.txt  9.txt  breaking2.txt  breaking3.dot  breaking5.dot  multi01.txt  pair01first.txt  pair01second.txt  pair02first.txt  pair02second.txt  pair03second.txt  static_guard_analysis_example1_mod1.txt  static_guard_analysis_example1_mod2.txt
grammar/examples/: 1.txt
mid-sem-1-presentation/: mid-sem-1.tex
mid-sem-2-presentation/: 6lts.dot  6ta.dot  6zvg.txt  8ta.dot  8ta.txt  8zvg.txt  presentation.lyx
ocaml/: Makefile  Makefile.am  Makefile.in  Rules.mk  _tags  configure  configure.ac  example1.txt  myocamlbuild.ml
ocaml/c/: Rules.mk  Zone_stubs_test.ml  interface.c  libzone.clib  zone.mli  zone_stubs.c  zone_stubs.c.nw  zone_stubs.mli  zone_stubs.mli.nw
ocaml/clutter/: Clock_constraint_clutter.ml  Clock_constraint_clutter_test.ml  Grammar_types_clutter.ml  Graph_functions2_clutter.ml  Graph_functions3.ml  Graph_functions3_test.ml  Makefile.am  Rules.mk  Test_base_clutter.ml  UDBM_utilities_clutter.ml  Unit_constraint_intersection.ml  Unit_constraint_intersection_test.ml  ZVG_modules_clutter.ml  ZVG_tree.ml.nw  _tags  graph_functions.ml
ocaml/clutter/next_step/: Rules.mk
ocaml/fernandez-ocaml-noweb/: Fernandez_modules.ml  Fernandez_modules.nw  Makefile  Rules.mk  fernandez.nw
ocaml/grammar-noweb/: Alt_grammar_types.ml.nw  Alt_timed_automaton_lexer.mll.nw  Alt_timed_automaton_parser.mly.nw  Makefile  Makefile.am  Rules.mk  calc.ml.nw  grammar_types.ml.nw  grammar_types.mli.nw  grammar_types.nw  lexer.mll.nw  parse_timed_automaton.ml  parser.mly.nw  timed_automaton_lexer.mll  timed_automaton_lexer.mll.nw  timed_automaton_parser.mly.nw  types.ml.nw  types.mli.nw
ocaml/grammar-noweb/examples/: 1.txt  10.txt  11.txt  2.txt  2clock01.txt  2clock03.txt  2clock04.txt  3.txt  4.txt  5.txt  6.txt  breaking1.txt  breaking4.dot  pair03first.txt  stab-vs-tadb-vs-taob.txt
ocaml/next_step/: Rules.mk  clock_utilities.mli  next_step.nw
ocaml/relations/: Makefile.am  Relations.ml  Relations.ml.nw  Relations_test.ml  Rules.mk  STAB.ml  STAB.ml.nw  TADB.ml  TADB.ml.nw  TAOB.ml  TAOB.ml.nw
ocaml/test/: Alt_test_base.ml  Makefile.am  Test_base.ml  test.ml
ocaml/thesis/: Makefile  Rules.mk  chapter01.tex  chapter02.tex  chapter03.tex  chapter04.tex  chapter05.tex  lts01.dot  lts01quotient.dot  pair01first.dot  pair01second.dot  pair03first.dot  regiongraph01.dot  regiongraph02.dot  thesis.tex  title.tex
ocaml/utilities/: Alt_UDBM_utilities.ml.nw  Alt_clock_constraint_utilities.ml.nw  Alt_parse_timed_automaton.ml.nw  Clock_constraint_utilities.ml  Clock_constraint_utilities.ml.nw  Makefile.am  NRQueue.ml  NRQueue.ml.nw  PCQueue_test.ml  Parse_timed_automaton.ml.nw  Rules.mk  Table_using_list.ml  Table_using_list.ml.nw  UDBM_utilities.ml  UDBM_utilities.ml.nw  UDBM_utilities_test.ml  clock_utilities.mli  clock_utilities.nw  graph_functions.ml  parse_timed_automaton.ml  parse_timed_automaton.ml.nw  unit_constraint_intersection.ml  zone.mli
ocaml/zone-valuation-graph/: Alt_ZVG_modules.ml.nw  Alt_calc.ml.nw  Alt_graph_functions2.ml.nw  Graph_functions2.ml  Graph_functions2.ml.nw  Graph_functions2_test.ml  Graph_functions3.ml  Graph_functions3_test.ml  Makefile.am  Rules.mk  ZVG_modules.ml  ZVG_modules.ml.nw  ZVG_tree.ml  ZVG_tree.ml.nw  calc.ml  calc.ml.nw  calc.mltop  compare_automata.ml  compare_automata.ml.nw
presentation/: Makefile  breaking2-zones-abstracted.dot  breaking2-zones-quotient.dot  breaking2-zones02.dot  breaking2-zones03.dot  pair03second-quotient.dot  presentation.bib  presentation.tex
relations/: Relations.ml.nw  STAB.ml.nw  TADB.ml.nw  TAOB.ml.nw
reports/mid-sem-2-presentation/: presentation.tex
reports/presentation/: pair03first-quotient.dot  pair03first.dot  pair03second-quotient.dot  pair03second.dot  presentation.tex
reports/semester-1-report/: report.tex
semester-1-presentation/: presentation.tex
semester-1-report/: report.tex
test/: Makefile.am  test.ml
thesis/: Makefile  Rules.mk  breaking2-zones-abstracted.dot  breaking2-zones01.dot  breaking2-zones02.dot  breaking2-zones03.dot  breaking2.dot  lts01.dot  lts01quotient.dot  pair02first.dot  pair02second.dot  pair03second.dot  thesis.bib  thesis.tex
utilities/: Clock_constraint_utilities.ml.nw  NRQueue.ml.nw  Parse_timed_automaton.ml.nw  Rules.mk  Table_using_list.ml.nw  UDBM_utilities.ml.nw
zone-valuation-graph/: Graph_functions2.ml.nw  Rules.mk  ZVG_modules.ml.nw  calc.ml.nw  compare_automata.ml.nw
