%D%/Grammar_types.cmo %D%/Grammar_types.cmi: \
c/Zone_stubs.cmi

%D%/Timed_automaton_lexer.cmo %D%/Timed_automaton_lexer.cmi: \
%D%/Timed_automaton_parser.cmi

%D%/Timed_automaton_parser.cmo %D%/Timed_automaton_parser.cmi: \
grammar-noweb/Grammar_types.cmi

%D%/Timed_automaton_parser.cmo: \
%D%/Timed_automaton_parser.cmi
