%D%/Graph_functions3.cmi %D%/Graph_functions3.cmo: \
%D%/Grammar_types_clutter.cmi \
%D%/Unit_constraint_intersection.cmi \
%D%/UDBM_utilities_clutter.cmi \
%D%/Clock_constraint_clutter.cmi \
%D%/ZVG_tree.cmi \
%D%/Test_base_clutter.cmi

%D%/Test_base_clutter.cmo %D%/Test_base_clutter.cmi: \
%D%/Grammar_types_clutter.cmi \
%D%/Clock_constraint_clutter.cmi

%D%/Grammar_types_clutter.cmo %D%/Grammar_types_clutter.cmi: \
grammar-noweb/Grammar_types.cmi

%D%/Clock_constraint_clutter.cmo %D%/Clock_constraint_clutter.cmi: \
grammar-noweb/Grammar_types.cmi \
%D%/Grammar_types_clutter.cmi \
utilities/UDBM_utilities.cmi \
%D%/UDBM_utilities_clutter.cmi \
utilities/Clock_constraint_utilities.cmi


