%D%/Relations.cmo %D%/Relations.cmi: \
%D%/STAB.cmi \
%D%/TADB.cmi \
%D%/TAOB.cmi \
utilities/Table_using_list.cmi

%D%/STAB.cmo %D%/STAB.cmi: \
zone-valuation-graph/ZVG_modules.cmi

%D%/TADB.cmo %D%/TADB.cmi: \
zone-valuation-graph/ZVG_modules.cmi

%D%/TAOB.cmo %D%/TAOB.cmi: \
zone-valuation-graph/ZVG_modules.cmi
