%D%/Parse_timed_automaton.cmo: \
grammar-noweb/Grammar_types.cmi \
grammar-noweb/Timed_automaton_parser.cmi \
grammar-noweb/Timed_automaton_lexer.cmi

%D%/Clock_constraint_utilities.cmo: \
grammar-noweb/Grammar_types.cmi \
%D%/UDBM_utilities.cmi

%D%/UDBM_utilities.cmo: \
test/Test_base.cmi

%D%/NRQueue.cmo %D%/NRQueue.cmi: \
grammar-noweb/Grammar_types.cmi

