%D%/Parse_timed_automaton.cmo %D%/Parse_timed_automaton.cmi: \
grammar-noweb/Grammar_types.cmi \
grammar-noweb/Timed_automaton_parser.cmi \
grammar-noweb/Timed_automaton_lexer.cmi

%D%/Clock_constraint_utilities.cmo: \
grammar-noweb/Grammar_types.cmi \
%D%/UDBM_utilities.cmi

%D%/UDBM_utilities.cmo %D%/UDBM_utilities.cmi: \
test/Test_base.cmi \
c/Zone_stubs.cmi \
grammar-noweb/Grammar_types.cmi

%D%/NRQueue.cmo %D%/NRQueue.cmi: \
grammar-noweb/Grammar_types.cmi

%D%/PCQueue_test.cmo %D%/PCQueue_test.cmi: \
%D%/NRQueue.cmi
